Add new functionality and postman collection
