# node/api/controllers/healthcheck.controller.js
@@ -1,13 +1,13 @@
-// misc.controller.js
+// healthcheck.controller.js
 
 const Log = require('log');
-const miscService = require('../services/misc.service');
+const healthcheckService = require('../services/healthcheck.service');
 
 // //////////////////////////////////////////////////////////////////////////////
 // PROPERTIES
 // //////////////////////////////////////////////////////////////////////////////
 
-const controllerName = '[Misc controller]';
+const controllerName = '[Healthcheck controller]';
 const log = new Log('debug');
 
 // //////////////////////////////////////////////////////////////////////////////
@@ -17,8 +17,11 @@ const log = new Log('debug');
 async function healthcheck(req, res) {
   try {
     log.info(`----->IN ${controllerName} ${healthcheck.name}`);
-    const result = await miscService.healthcheck();
+
+    const result = await healthcheckService.healthcheck();
+
     log.info(`----->OUT ${controllerName} ${healthcheck.name} -> ${JSON.stringify(result)}`);
+
     res.status(200).send({ message: 'IPFS node is connected and running' });
   } catch (error) {
     log.info(`----->OUT ${controllerName} ${healthcheck.name} (ERROR): ${error}`);
